force-app/main/default/objects/Job_Posting__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Department</label>
    <referenceTo>Department__c</referenceTo>
    <relationshipLabel>Job Postings</relationshipLabel>
    <relationshipName>Job_Postings</relationshipName>
    <type>Lookup</type>
</CustomField>