force-app/main/default/objects/Job_Posting__c/fields/Filled_Positions__c.field-meta.xml
<CustomField>
    <fullName>Filled_Positions__c</fullName>
    <label>Filled Positions</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>