force-app/main/default/objects/Job_Posting__c/fields/Hospital__c.field-meta.xml
<CustomField>
    <fullName>Hospital__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hospital</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Job Postings</relationshipLabel>
    <relationshipName>Job_Postings</relationshipName>
    <type>Lookup</type>
</CustomField>