force-app/main/default/objects/Job_Posting__c/fields/Job_Posting_Name__c.field-meta.xml
<CustomField>
    <fullName>Job_Posting_Name__c</fullName>
    <label>Job Posting Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>