force-app/main/default/objects/Job_Posting__c/fields/Open_Positions_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Open_Positions_Remaining__c</fullName>
    <formula>Open_Positions__c - Filled_Positions__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open Positions Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>