force-app/main/default/objects/Job_Posting__c/fields/Total_Applications__c.field-meta.xml
<CustomField>
    <fullName>Total_Applications__c</fullName>
    <label>Total Applications</label>
    <summaryForeignKey>Job_Application__c.Job_Posting__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>