force-app/main/default/objects/Job_Posting__c/fields/Urgent_Hiring__c.field-meta.xml
<CustomField>
    <fullName>Urgent_Hiring__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Urgent Hiring</label>
    <type>Checkbox</type>
</CustomField>